--- a/practice.html
+++ b/practice.html
@@ -2,45 +2,53 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <!-- viewport goodness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>skrollr practice</title>
+  <!-- icon -->
+<!--   <link rel="shortcut icon" href="images/tab-bee.ico">-->  <!-- Old Standard TT font -->
+  <link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css'>
+  <!-- cabin font -->
+  <link href='https://fonts.googleapis.com/css?family=Cabin:400,500,400italic,500italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
+  <!-- foundation -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.1/foundation.min.css">
+  <!-- stylesheet -->
   <link rel="stylesheet" href="practice.css" type="text/css">
 </head>
 
-<div class="content">
-  <div class="intro"
-       data-0="transform:translateY(65px);"
-       data-500="transform:translateY(0px);">Scroll to see the effect</div>
-  <div class="arrow"
-       data-0="opacity:1; display:block; transform:translateY(-10px);"
-       data-400="opacity:0; display:none; transform:translateY(-45px);">▾</div>
-  <p class="text"
-       data-500="width:0%; opacity:0;"
-       data-1500="width:98%; opacity:1;">
-  This text i manipulated by the skrollr js script.</p>
-  <p class="text"
-       data-1000="width:0%; opacity:0;"
-       data-2500="width:98%; opacity:1;">
-  Nearly everything is changed in the HTML code</p>
-  <p class="text"
-       data-2000="width:0%; opacity:0;"
-       data-3500="width:98%; opacity:1;">
-  but with the data-attribute and CSS. So please try it!</p>
-  <p class="text"
-       data-3000="width:0%; opacity:0;"
-       data-4500="width:98%; opacity:1;">
-  Images <img id="bitcoin" src="https://cdn4.iconfinder.com/data/icons/payment-method/160/payment_method_bitcoin-256.png" alt="" /> are also supported :D</p>
-  <p class="text credit"
-       data-4000="width:0%; opacity:0;"
-       data-5500="width:98%; opacity:1;">
-  Made by Joacim Nilsson with help from Alexander Prinzhorn</p>
-</div>
 
+ 
+<!-- HTML -->
+<section id="slide-1" class="homeSlide">
+    <div class="bcg"
+        data-center="background-position: 50% 0px;"
+        data-top-bottom="background-position: 50% -100px;"
+        data-anchor-target="#slide-1">
+        <div class="hsContainer">
+            <div class="hsContent"
+                data-center="opacity: 1"
+                data-106-top="opacity: 0"
+                data-anchor-target="#slide-1 h2">
+                <h2>God appears <br> only to disapprove</h2>
+            </div>
+        </div>
+    </div>
+</section>
+
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+<script src="js/skrollr.js"></script>
+<script src="js/_main.js"></script>
+  <!-- foundation js -->
+  <script src="https://cdn.jsdelivr.net/foundation/6.2.1/foundation.min.js"></script>
   <!-- javascript -->
-    <script type="text/javascript" src="skrollr.min.js"></script>
-    <script type="text/javascript">
-    var s = skrollr.init({
-    smoothScrolling: true
-    });
-    </script>
+  <script type="text/javascript" src="skrollr.min.js"></script>
+  <script type="text/javascript">
+  var s = skrollr.init();
+  </script>
+  <script src="script.js"></script>
 </body>
 </html>
