--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             data-center="opacity: 1"
             data-106-top="opacity: 0"
             data-anchor-target="#pic7 p">
-           <p class="bigwhite">Kant sells flowers in his flower shop. Some people think he has the most beautiful flowers in the world.</p>
+           <p class="bigwhite">Some people think Kant has the most beautiful flowers in the world.</p>
           </div>
         </div>
       </div>
