changed front page slightly

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <section class="row story">
     <div class="small-10 small-offset-1 columns">
-      <p class="first">A man wakes up and he is <span data-tooltip aria-haspopup="true" class="has-tip" title="From Immanuel Kant’s Critique of the Power of Judgment, “Flowers… signify nothing, do not depend on any determinate object, and yet please.">Immanuel Kant.</span> Wow! He makes bad puns to himself in the mirror in the morning. Immanuel Kant sells his suits and buys a flower shop that he names Kant-Forget-Me. Not every Immanuel Kant works in flower shops - this one does. Kant arrives at 5 a.m. when there are only the stars to distract him.
+      <p class="first">A man wakes up and he is <span data-tooltip aria-haspopup="true" class="has-tip" title="From Immanuel Kant’s Critique of the Power of Judgment, “Flowers… signify nothing, do not depend on any determinate object, and yet please.">Immanuel Kant</span>. Wow! He makes bad puns to himself in the mirror in the morning. Immanuel Kant sells his suits and buys a flower shop that he names Kant-Forget-Me. Not every Immanuel Kant works in flower shops - this one does. Kant arrives at 5 a.m. when there are only the stars to distract him.
       </p>
     </div>
   </section>
