included contact icons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.1/foundation.min.css">
   <!-- stylesheet -->
   <link rel="stylesheet" href="css/style.css" type="text/css">
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 
@@ -240,7 +242,17 @@
   </section>
 </div>
 
-
+  <div class="row contact-icons">
+    <div class="small-12 large-offset-1 large-10 large-offset-1 columns">       
+      <div class="row contact-icons center">
+        <a href="mailto:hi@brycebortree.com"><i class="contacticon fa fa-envelope-square fa-5x" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/brycebortree
+       "><i class="fa fa-linkedin-square fa-5x contacticon" aria-hidden="true"></i></a>
+        <a href="https://github.com/brytree"><i class="fa fa-github-square fa-5x contacticon" aria-hidden="true"></i></a>
+      </div>
+    </div>
+  </div>
 
   <!-- jQuery -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
