and portfolio link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         data-0="font-size: 70px; margin-left: -240px;" 
         data-625="font-size:50px; margin-left: -220px;">
         This <br> Flowered <br> Significance<br>
-            <a href="http://www.brycebortree.com">
+            <a href="http://brycebortree.com">
             by Bryce Bortree
             </a> 
         </p>
@@ -245,11 +245,12 @@
   <div class="row contact-icons">
     <div class="small-12 large-offset-1 large-10 large-offset-1 columns">       
       <div class="row contact-icons center">
-        <a href="mailto:hi@brycebortree.com"><i class="contacticon fa fa-envelope-square fa-5x" aria-hidden="true"></i>
+        <a href="https://brycebortree.com"><i class="fa fa-laptop fa-5x contacticon" aria-hidden="true"></i></a>
+        <a href="mailto:brycebortree@gmail.com"><i class="contacticon fa fa-envelope fa-5x" aria-hidden="true"></i>
         </a>
         <a href="https://www.linkedin.com/in/brycebortree
-       "><i class="fa fa-linkedin-square fa-5x contacticon" aria-hidden="true"></i></a>
-        <a href="https://github.com/brytree"><i class="fa fa-github-square fa-5x contacticon" aria-hidden="true"></i></a>
+       "><i class="fa fa-linkedin fa-5x contacticon" aria-hidden="true"></i></a>
+        <a href="https://github.com/brytree"><i class="fa fa-github fa-5x contacticon" aria-hidden="true"></i></a>
       </div>
     </div>
   </div>
