--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p class="scroll_tip" 
         data-0="font-size: 70px; margin-left: -240px;" 
         data-625="font-size:50px; margin-left: -220px;">
-        This <br> Flowered <br> Significance<br>
+        Behind <br> The <br> Universe<br>
             <a href="http://brycebortree.com">
             by Bryce Bortree
             </a> 
