Fix title & link

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <p class="scroll_tip" 
         data-0="font-size: 70px; margin-left: -240px;" 
         data-625="font-size:50px; margin-left: -220px;">
-        This <br> Flowered <br> Significance<br>
-            <a href="http://www.brycebortree.com">
+        Behind <br> The <br> Universe<br>
+            <a href="https://www.brycebortree.github.io">
             by Bryce Bortree
             </a> 
         </p>
